fix: overflow for button 'Send' in newsletter section

--- a/css/style.css
+++ b/css/style.css
@@ -837,31 +837,27 @@ template {
 }
 
 .subscribe {
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 350px;
-  height: 55px;
   border-radius: 4px;
   overflow: hidden;
 }
 
 .subscribe__input {
-  position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 55px;
   padding-left: 33px;
   border: none;
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
-  padding-right: 75px;
+  padding-right: 5px;
 }
 
 .subscribe__button {
-  position: absolute;
-  z-index: 4;
-  right: 0;
-  top: 0;
-  height: 100%;
+  min-height: 55px;
   border: none;
   background-color: #EC1F46;
   color: #ffffff;
@@ -869,6 +865,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   padding: 18px 20px;
+  max-width: 130px;
 }
 
 .reviews {
