--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -35,27 +35,21 @@
             line-height: 45px
             text-transform: uppercase
 .subscribe
-    position: relative
+    display: flex
     width: 350px
-    height: 55px
     border-radius: 4px
     overflow: hidden
     &__input
-        position: absolute
         width: 100%
-        height: 100%
+        min-height: 55px
         padding-left: 33px
         border: none
         font-weight: 300
         font-size: 14px
         line-height: 18px
-        padding-right: 75px
+        padding-right: 5px
     &__button
-        position: absolute
-        z-index: 4
-        right: 0
-        top: 0
-        height: 100%
+        min-height: 55px
         border: none
         background-color: $primary
         color: $light
@@ -63,3 +57,4 @@
         font-size: 12px
         line-height: 15px
         padding: 18px 20px
+        max-width: 130px
